--- a/C#/crossplatform/ClassLibrary1/ClassLibrary1.csproj
+++ b/C#/crossplatform/ClassLibrary1/ClassLibrary1.csproj
@@ -35,8 +35,48 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="AANode.cs" />
+    <Compile Include="AATree.cs" />
+    <Compile Include="AvlNode.cs" />
+    <Compile Include="AvlTree.cs" />
+    <Compile Include="BinaryHeap.cs" />
+    <Compile Include="BinaryNode.cs" />
+    <Compile Include="BinarySearchTree.cs" />
+    <Compile Include="BinomialNode.cs" />
+    <Compile Include="BinomialQueue.cs" />
+    <Compile Include="BoyerMooreSearch.cs" />
+    <Compile Include="BubbleSort.cs" />
     <Compile Include="ClassLibrary1.cs" />
+    <Compile Include="Comparable.cs" />
+    <Compile Include="CopyOfAANode.cs" />
+    <Compile Include="CursorList.cs" />
+    <Compile Include="CursorListItr.cs" />
+    <Compile Include="CursorNode.cs" />
+    <Compile Include="DisjSets.cs" />
+    <Compile Include="DisjSetsFast.cs" />
+    <Compile Include="Elucid.cs" />
+    <Compile Include="FisherYates.cs" />
+    <Compile Include="Hashable.cs" />
+    <Compile Include="LeftHeapNode.cs" />
+    <Compile Include="LeftistHeap.cs" />
+    <Compile Include="LinkedList.cs" />
+    <Compile Include="LinkedListItr.cs" />
+    <Compile Include="ListNode.cs" />
+    <Compile Include="MyInteger.cs" />
+    <Compile Include="Overflow.cs" />
+    <Compile Include="PairHeap.cs" />
+    <Compile Include="PairNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueAr.cs" />
+    <Compile Include="QuickSort.cs" />
+    <Compile Include="Rotations.cs" />
+    <Compile Include="SeparateChainingHashTable.cs" />
+    <Compile Include="SkipList.cs" />
+    <Compile Include="SkipNode.cs" />
+    <Compile Include="SplayTree.cs" />
+    <Compile Include="StackAr.cs" />
+    <Compile Include="StackLi.cs" />
+    <Compile Include="Underflow.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
